# SFML-conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  window.cpp
src/config/: conf.hpp  confProcess.hpp
tests/: CMakeLists.txt  test_grid_generator.cpp  test_neighbour_count.cpp
